modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -172,47 +172,36 @@
     }
    },
    "source": [
-    "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css\" integrity=\"sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ==\" crossorigin=\"anonymous\" referrerpolicy=\"no-referrer\" />\n",
+    "<style>.flex-container{display: flex}</style>\n",
     "\n",
-    "<style>\n",
-    "  img{\n",
-    "    width: 450px;\n",
-    "  }\n",
-    "</style>\n",
-    "\n",
-    "\n",
-    "<div class=\"columns\">\n",
-    "  <div class=\"column is-one-quarter\">\n",
-    "    <table class=\"table is-fullwidth is-striped\">\n",
-    "      <thead>\n",
-    "        <tr>\n",
-    "          <th>States</th>\n",
-    "          <th>Behaviors</th>\n",
-    "        </tr>\n",
-    "      </thead>\n",
-    "      <tbody>\n",
-    "        <tr>\n",
-    "          <td><code>Name</code></td>\n",
-    "          <td><code>Bark()</code></td>\n",
-    "        </tr>\n",
-    "        <tr>\n",
-    "          <td><code>FurColor</code></td>\n",
-    "          <td><code>Sit()</code></td>\n",
-    "        </tr>\n",
-    "        <tr>\n",
-    "          <td><code>Breed</code></td>\n",
-    "          <td><code>LayDown()</code></td>\n",
-    "        </tr>\n",
-    "        <tr>\n",
-    "          <td><code>Age</code></td>\n",
-    "          <td><code>RollOver()</code></td>\n",
-    "        </tr>\n",
-    "      </tbody>\n",
-    "    </table>\n",
-    "  </div>\n",
-    "  <div class=\"column\">\n",
-    "    <img src=\"./_img/lassie.jpg\" style=\"width: 450px\"></img>\n",
-    "  </div>\n",
+    "<div class=\"flex-container\">\n",
+    "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 50px;\"></img>\n",
+    "  <table class=\"table is-fullwidth is-striped\">\n",
+    "    <thead>\n",
+    "      <tr>\n",
+    "        <th>States</th>\n",
+    "        <th>Behaviors</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr>\n",
+    "        <td><code>Name</code></td>\n",
+    "        <td><code>Bark()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>FurColor</code></td>\n",
+    "        <td><code>Sit()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>Breed</code></td>\n",
+    "        <td><code>LayDown()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>Age</code></td>\n",
+    "        <td><code>RollOver()</code></td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
     "</div>"
    ]
   },
