modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -172,10 +172,8 @@
     }
    },
    "source": [
-    "<style>.flex-container{display: flex}</style>\n",
-    "\n",
-    "<div class=\"flex-container\">\n",
-    "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 50px;\"></img>\n",
+    "<div class=\"flex-container\" style=\"display: flex\">\n",
+    "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
     "  <table class=\"table is-fullwidth is-striped\">\n",
     "    <thead>\n",
     "      <tr>\n",
@@ -226,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -253,72 +251,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
