modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -63,23 +63,12 @@
    "source": [
     "Software **objects** model:\n",
     "\n",
-    "<style>\n",
-    "  dt{\n",
-    "    font-weight: bold;\n",
-    "    margin-left: 30px;\n",
-    "  } \n",
-    "  dd{\n",
-    "    font-style:italic;\n",
-    "    margin-left: 60px;\n",
-    "  }\n",
-    "</style>\n",
-    "\n",
     "<dl>\n",
-    "<dt>real world objects</dt>\n",
-    "  <dd>people, cars, goods, purchases</dd>\n",
+    "<dt style=\"font-weight: bold; margin-left: 30px;\">real world objects</dt>\n",
+    "  <dd style=\"font-style:italic; margin-left: 60px;\">people, cars, goods, purchases</dd>\n",
     "<br>\n",
-    "<dt>abstract concepts</dt>\n",
-    "  <dd>stacks, queues, lists, trees</dd>\n",
+    "<dt style=\"font-weight: bold; margin-left: 30px;\">abstract concepts</dt>\n",
+    "  <dd style=\"font-style:italic; margin-left: 60px;\">stacks, queues, lists, trees</dd>\n",
     "</dl>"
    ]
   },
