--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "In  we can distinguish **objects** by the following two groups of **characteristics**:   \n",
     "1. **States** – The characteristics of the **object** which define or describe it when it is created or updated.\n",
-    "2. **Behavior** – The specific, distinctive actions which can be performed by the **object**."
+    "2. **Behaviors** – The specific, distinctive actions which can be performed by the **object**."
    ]
   },
   {
