--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -242,21 +242,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
     },
     "polyglot_notebook": {
      "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The **class** is what **defines the abstract characteristics of objects**. \n",
+    "   \n",
+    "It provides a *structure* for **object**, or a pattern which we use to describe the nature of something. **class**es are building blocks of **OOP** and are inseparably related to the **object**s. \n",
+    "   \n",
+    "Furthermore, each **object** is an **instance** of exactly one specific **class**.   \n",
+    "   \n",
+    "We are going to give as an example a **class** and an **object**, which is its **instance**. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<div class=\"flex-container\" style=\"display: flex\">\n",
+    "  <img src=\"./_img/different_dogs.png\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
+    "  <p style=\"font-size: 75px; margin-right: 25px;\">&#10145</p>\n",
+    "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px;\"></img>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We have a **class** $dog$ and an **object** $Lassie$, which is an **instance** of the **class** $dog$ (we say it is an **object** of type $dog$).   \n",
+    "The **class** $dog$ describes the characteristics of *all* $dogs$ whereas $Lassie$ is a *certain* $dog$."
+   ]
   }
  ],
  "metadata": {
@@ -270,8 +324,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
