--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
-    "  <table class=\"table is-fullwidth is-striped\">\n",
+    "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
     "        <th>States</th>\n",
@@ -172,20 +172,20 @@
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
-    "        <td><code>Name</code></td>\n",
-    "        <td><code>Bark()</code></td>\n",
+    "        <td>Lassie</td>\n",
+    "        <td>\"Woof!\"</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>FurColor</code></td>\n",
-    "        <td><code>Sit()</code></td>\n",
+    "        <td>White, Red, Black</td>\n",
+    "        <td>*sits down*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>Breed</code></td>\n",
-    "        <td><code>LayDown()</code></td>\n",
+    "        <td>Collie</td>\n",
+    "        <td>*plays dead*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>Age</code></td>\n",
-    "        <td><code>RollOver()</code></td>\n",
+    "        <td>Female</td>\n",
+    "        <td>*rescues little boy from the bottom of the well*</td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
@@ -292,7 +292,7 @@
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/different_dogs.png\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
     "  <p style=\"font-size: 75px; margin-right: 25px;\">&#10145</p>\n",
-    "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px;\"></img>\n",
+    "  <img src=\"./_img/lassie.jpg\" style=\"width: 500px;\"></img>\n",
     "</div>"
    ]
   },
@@ -310,6 +310,188 @@
    "source": [
     "We have a **class** $dog$ and an **object** $Lassie$, which is an **instance** of the **class** $dog$ (we say it is an **object** of type $dog$).   \n",
     "The **class** $dog$ describes the characteristics of *all* $dogs$ whereas $Lassie$ is a *certain* $dog$."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Class Attributes and Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **class** defines the **characteristics of an object** (also called **attributes**), and its **behavior** (**actions that can be performed by the object**). \n",
+    "   \n",
+    "The **attributes** of the **class** are defined as its own variables within its own body (called **member variables**). \n",
+    "   \n",
+    "The **behavior** of objects is modeled by the definition of **methods** in **classes**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<div class=\"flex-container\" style=\"display: flex\">\n",
+    "  <img src=\"./_img/different_dogs.png\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
+    "  <table>\n",
+    "    <thead>\n",
+    "      <tr>\n",
+    "        <th>Attributes</th>\n",
+    "        <th>Methods</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr>\n",
+    "        <td><code>Name</code></td>\n",
+    "        <td><code>Bark()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>FurColor</code></td>\n",
+    "        <td><code>Sit()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>Breed</code></td>\n",
+    "        <td><code>PlayDead()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>Gender</code></td>\n",
+    "        <td><code>RescueBoyFromWell()</code></td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Returning to the example described above, in order to have have created $Lassie$, we needed to have first defined a **Class** representing a $dog$ that models the real object \"dog\". \n",
+    "   \n",
+    "The **class** is going to include *characteristics* which are *common for all dogs* (such as **breed** and **fur color**), as well as typical for the dog *behavior* (**barking**, **sitting**, **playing dead**, etc.). \n",
+    "   \n",
+    "In this case we are going to have **attributes** `Breed` and `FurColor`, and the *behavior* is going to be implemented by the **methods** `Bark()`, `Sit()`, `PlayDead()` and `RescueBoyFromWell()`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Every Object is an Instance of a Class"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Each **object** is an **instance** of just *one* **class**, and is created according to a pattern designed within it.    \n",
+    "\n",
+    "Creating the **object** from a defined **class** is called **instantiation**. \n",
+    "\n",
+    "The **instance** is the **object** itself, which is created during runtime.   \n",
+    "Each object is in **instance** of a specific **class**. This **instance** is characterized by *state* – set of values, associated with **class** *attributes*.   \n",
+    "\n",
+    "So, foundationally, the **object** consists of two things, each derived from the it's **class** definition: \n",
+    "1. *Attributes* describing the current *State* \n",
+    "2. *Methods* which perform specific functional *Behaviors*.    \n",
+    "   \n",
+    "The *state* is *specific* for the **instance** (the **object**), but the *behavior* is *common for all objects* which are **instances** of a given **class**."
    ]
   }
  ],
