modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -166,8 +166,8 @@
     "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th>States</th>\n",
-    "        <th>Behaviors</th>\n",
+    "        <th style=\"text-align: left;\">States</th>\n",
+    "        <th style=\"text-align: left;\">Behaviors</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
