modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -161,30 +161,56 @@
     }
    },
    "source": [
+    "<style>\n",
+    "  td, th{\n",
+    "    text-align: center !important;\n",
+    "  }\n",
+    "\n",
+    "  table{\n",
+    "    margin-right: 25px;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
     "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th style=\"text-align: left;\">States</th>\n",
-    "        <th style=\"text-align: left;\">Behaviors</th>\n",
+    "        <th>States</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
     "        <td>Lassie</td>\n",
-    "        <td>\"Woof!\"</td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td>White, Red, Black</td>\n",
-    "        <td>*sits down*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td>Collie</td>\n",
-    "        <td>*plays dead*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td>Female</td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "  <table>\n",
+    "    <thead>\n",
+    "      <tr>\n",
+    "        <th>Behaviors</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr>\n",
+    "        <td>\"Woof!\"</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td>*sits down*</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td>*plays dead*</td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
     "        <td>*rescues little boy from the bottom of the well*</td>\n",
     "      </tr>\n",
     "    </tbody>\n",
@@ -388,30 +414,56 @@
     }
    },
    "source": [
+    "<style>\n",
+    "  td, th{\n",
+    "    text-align: center !important;\n",
+    "  }\n",
+    "\n",
+    "  table{\n",
+    "    margin-right: 25px;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/different_dogs.png\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
     "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
     "        <th>Attributes</th>\n",
-    "        <th>Methods</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
     "        <td><code>Name</code></td>\n",
-    "        <td><code>Bark()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td><code>FurColor</code></td>\n",
-    "        <td><code>Sit()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td><code>Breed</code></td>\n",
-    "        <td><code>PlayDead()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
     "        <td><code>Gender</code></td>\n",
+    "      </tr>\n",
+    "    </tbody>\n",
+    "  </table>\n",
+    "  <table>\n",
+    "    <thead>\n",
+    "      <tr>\n",
+    "        <th>Methods</th>\n",
+    "      </tr>\n",
+    "    </thead>\n",
+    "    <tbody>\n",
+    "      <tr>\n",
+    "        <td><code>Bark()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>Sit()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
+    "        <td><code>PlayDead()</code></td>\n",
+    "      </tr>\n",
+    "      <tr>\n",
     "        <td><code>RescueBoyFromWell()</code></td>\n",
     "      </tr>\n",
     "    </tbody>\n",
