modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -173,45 +173,45 @@
     "\n",
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/lassie.jpg\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
-    "  <table>\n",
+    "  <table style=\"margin-right: 25px;\">\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th>States</th>\n",
+    "        <th style=\"text-align: center;\">States</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
-    "        <td>Lassie</td>\n",
+    "        <td style=\"text-align: center;\">Lassie</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>White, Red, Black</td>\n",
+    "        <td style=\"text-align: center;\">White, Red, Black</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>Collie</td>\n",
+    "        <td style=\"text-align: center;\">Collie</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>Female</td>\n",
+    "        <td style=\"text-align: center;\">Female</td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
     "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th>Behaviors</th>\n",
+    "        <th style=\"text-align: center;\">Behaviors</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
-    "        <td>\"Woof!\"</td>\n",
+    "        <td style=\"text-align: center;\">\"Woof!\"</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>*sits down*</td>\n",
+    "        <td style=\"text-align: center;\">*sits down*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>*plays dead*</td>\n",
+    "        <td style=\"text-align: center;\">*plays dead*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td>*rescues little boy from the bottom of the well*</td>\n",
+    "        <td style=\"text-align: center;\">*rescues little boy from the bottom of the well*</td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
@@ -414,57 +414,47 @@
     }
    },
    "source": [
-    "<style>\n",
-    "  td, th{\n",
-    "    text-align: center !important;\n",
-    "  }\n",
-    "\n",
-    "  table{\n",
-    "    margin-right: 25px;\n",
-    "  }\n",
-    "</style>\n",
-    "\n",
     "<div class=\"flex-container\" style=\"display: flex\">\n",
     "  <img src=\"./_img/different_dogs.png\" style=\"width: 450px; margin-right: 25px;\"></img>\n",
-    "  <table>\n",
+    "  <table style=\"margin-right: 25px;\">\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th>Attributes</th>\n",
+    "        <th style=\"text-align: center\">Attributes</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
-    "        <td><code>Name</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>Name</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>FurColor</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>FurColor</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>Breed</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>Breed</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>Gender</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>Gender</code></td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
     "  <table>\n",
     "    <thead>\n",
     "      <tr>\n",
-    "        <th>Methods</th>\n",
+    "        <th style=\"text-align: center\">Methods</th>\n",
     "      </tr>\n",
     "    </thead>\n",
     "    <tbody>\n",
     "      <tr>\n",
-    "        <td><code>Bark()</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>Bark()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>Sit()</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>Sit()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>PlayDead()</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>PlayDead()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td><code>RescueBoyFromWell()</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>RescueBoyFromWell()</code></td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
