modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -279,13 +279,24 @@
     }
    },
    "source": [
-    "The **class** is what **defines the abstract characteristics of objects**. \n",
-    "   \n",
-    "It provides a *structure* for **object**, or a pattern which we use to describe the nature of something. **class**es are building blocks of **OOP** and are inseparably related to the **object**s. \n",
-    "   \n",
-    "Furthermore, each **object** is an **instance** of exactly one specific **class**.   \n",
-    "   \n",
-    "We are going to give as an example a **class** and an **object**, which is its **instance**. "
+    "The **class** is what **defines the abstract characteristics of objects**.    \n",
+    "It provides a *structure* for **object**, or a pattern which we use to describe the nature of something. **class**es are building blocks of **OOP** and are inseparably related to the **object**s.   \n",
+    "Furthermore, each **object** is an **instance** of exactly one specific **class**.   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, we are going to give an example of a **class** and the **object** which is an **instance** of it:"
    ]
   },
   {
