modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -279,9 +279,8 @@
     }
    },
    "source": [
-    "The **class** is what **defines the abstract characteristics of objects**.    \n",
-    "It provides a *structure* for **object**, or a pattern which we use to describe the nature of something. **class**es are building blocks of **OOP** and are inseparably related to the **object**s.   \n",
-    "Furthermore, each **object** is an **instance** of exactly one specific **class**.   "
+    "The **class** is what **defines the abstract characteristics of objects**. It provides a *structure* for **object**, or a pattern which we use to describe the nature of something.   \n",
+    "**Classes** are building blocks of **OOP** and are inseparably related to the **objects**. Furthermore, each **object** is an **instance** of exactly one specific **class**.   "
    ]
   },
   {
@@ -297,21 +296,6 @@
    },
    "source": [
     "Below, we are going to give an example of a **class** and the **object** which is an **instance** of it:"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
    ]
   },
   {
