--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -114,7 +114,7 @@
     }
    },
    "source": [
-    "In  we can distinguish **objects** by the following two groups of **characteristics**:   \n",
+    "We can distinguish **objects** by the following two groups of **characteristics**:   \n",
     "1. **States** – The *characteristics* of the **object** which define or describe it when it is created or updated.\n",
     "2. **Behaviors** – The specific, distinctive *functions* which can be performed by the **object**."
    ]
