modified:   11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb

--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -146,7 +146,7 @@
     }
    },
    "source": [
-    "Let’s take for example an **real world** **object** modeled after a $dog$ – `Lassie`:"
+    "Let’s take for example an **real world** **object** modeled after a $Dog$ – `Lassie`:"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "        <td style=\"text-align: center;\">*plays dead*</td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td style=\"text-align: center;\">*rescues little boy from the bottom of the well*</td>\n",
+    "        <td style=\"text-align: center;\">*rolls over*</td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
@@ -329,8 +329,8 @@
     }
    },
    "source": [
-    "We have a **class** $dog$ and an **object** $Lassie$, which is an **instance** of the **class** $dog$ (we say it is an **object** of type $dog$).   \n",
-    "The **class** $dog$ describes the characteristics of *all* $dogs$ whereas $Lassie$ is a *certain* $dog$."
+    "We have a **class** $Dog$ and an **object** $Lassie$, which is an **instance** of the **class** $Dog$ (we say it is an **object** of type $Dog$).   \n",
+    "The **class** $Dog$ describes the characteristics of *all* $Dogs$ whereas $Lassie$ is a *certain* $Dog$."
    ]
   },
   {
@@ -449,7 +449,7 @@
     "        <td style=\"text-align: center;\"><code>PlayDead()</code></td>\n",
     "      </tr>\n",
     "      <tr>\n",
-    "        <td style=\"text-align: center;\"><code>RescueBoyFromWell()</code></td>\n",
+    "        <td style=\"text-align: center;\"><code>RollOver()</code></td>\n",
     "      </tr>\n",
     "    </tbody>\n",
     "  </table>\n",
@@ -468,11 +468,11 @@
     }
    },
    "source": [
-    "Returning to the example described above, in order to have have created $Lassie$, we needed to have first defined a **Class** representing a $dog$ that models the real object \"dog\". \n",
+    "Returning to the example described above, in order to have have created $Lassie$, we needed to have first defined a **Class** representing a $Dog$ that models the real object \"Dog\". \n",
     "   \n",
-    "The **class** is going to include *characteristics* which are *common for all dogs* (such as **breed** and **fur color**), as well as typical for the dog *behavior* (**barking**, **sitting**, **playing dead**, etc.). \n",
+    "The **class** is going to include *characteristics* which are *common for all Dogs* (such as **breed** and **fur color**), as well as typical for the Dog *behavior* (**barking**, **sitting**, **playing dead**, and **rolling over**.). \n",
     "   \n",
-    "In this case we are going to have **attributes** `Breed` and `FurColor`, and the *behavior* is going to be implemented by the **methods** `Bark()`, `Sit()`, `PlayDead()` and `RescueBoyFromWell()`."
+    "In this case we are going to have **attributes** `Breed` and `FurColor`, and the *behavior* is going to be implemented by the **methods** `Bark()`, `Sit()`, `PlayDead()` and `RollOver()`."
    ]
   },
   {
@@ -558,7 +558,564 @@
     }
    },
    "source": [
-    "### The C# `class`"
+    "### What is a Class in $C\\#$?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "**Classes** in $C\\#$ are declared by an optional **access modifier**, followed by the keyword `class`, followed by an **identifier** (`class` **name**), along with a set of **data members** and **methods**, each of which are provided within a *code block*:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifier] class ClassName\n",
+    "{ // Begin code block\n",
+    "\n",
+    "\n",
+    "    // Some data members\n",
+    "\n",
+    "    // ...\n",
+    "    \n",
+    "    // Some methods\n",
+    "\n",
+    "\n",
+    "} // End code block\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "`class`es in $C\\#$ can contain the following **Elements**:\n",
+    "- **Fields** – member-variables from a certain type; \n",
+    "- **Properties** – these are a special type of elements, which extend the functionality of the fields by giving the ability of extra data management functions when extracting and recording it within the `class`'s fields.\n",
+    "- **Methods** – they implement the manipulation of the data."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Implementing the $Dog$ `class` in $C\\#$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Dog\n",
+    "{\n",
+    "\n",
+    "    // Fields\n",
+    "    private string name,\n",
+    "                   fur_color,\n",
+    "                   breed,\n",
+    "                   gender;\n",
+    "\n",
+    "\n",
+    "    // Properties\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get\n",
+    "        {\n",
+    "            return this.name;\n",
+    "        }\n",
+    "\n",
+    "        set\n",
+    "        {\n",
+    "            this.name = value;\n",
+    "        }\n",
+    "        \n",
+    "    }\n",
+    "\n",
+    "    public string FurColor\n",
+    "    {\n",
+    "        get\n",
+    "        {\n",
+    "            return this.fur_color;\n",
+    "        }\n",
+    "\n",
+    "        set\n",
+    "        {\n",
+    "            this.fur_color = value;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public string Breed\n",
+    "    {\n",
+    "        get\n",
+    "        {\n",
+    "            return this.breed;\n",
+    "        }\n",
+    "\n",
+    "        set\n",
+    "        {\n",
+    "            this.breed = value;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    public string Gender\n",
+    "    {\n",
+    "        get\n",
+    "        {\n",
+    "            return this.gender;\n",
+    "        }\n",
+    "\n",
+    "        set\n",
+    "        {\n",
+    "            this.gender = value;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Constructor\n",
+    "    public Dog( string name, string fur_color, string breed, string gender )\n",
+    "    {\n",
+    "        this.Name     = name;\n",
+    "        this.FurColor = fur_color;\n",
+    "        this.Breed    = breed;\n",
+    "        this.Gender   = gender;\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    // Methods\n",
+    "    public void Bark()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Woof!\");\n",
+    "    }\n",
+    "\n",
+    "    public void Sit()\n",
+    "    {\n",
+    "        Console.WriteLine(\"*sits down*\");\n",
+    "    }\n",
+    "\n",
+    "    public void PlayDead()\n",
+    "    {\n",
+    "        Console.WriteLine(\"*plays dead*\");\n",
+    "    }\n",
+    "\n",
+    "    public void RollOver()\n",
+    "    {\n",
+    "        Console.WriteLine(\"*rolls over*\");\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, we may create an **instance** the $Dog$ `class` modeled after our beloved $Lassie$: "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"./_img/lassie.jpg\" style=\"width: 450px;\"></img>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Lassie = new Dog( \"Lassie\", \"White, Red, Black\", \"Collie\", \"Female\" );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that this **instance** (which is just another way of saying **Object**) enables us to access to it's **Properties** by referencing the **Object Name** and then a *dot* (`.`), and then **Property Name** as demonstrated below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lassie"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Lassie.Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "White, Red, Black"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Lassie.FurColor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Collie"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Lassie.Breed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Female"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Lassie.Gender"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Additionally, we may also access the `class`'s **Methods** and use their values as we see fit. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lassie.Bark();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*sits down*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lassie.Sit();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*plays dead*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lassie.PlayDead();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*rolls over*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lassie.RollOver();"
    ]
   }
  ],
@@ -573,72 +1130,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
-      ],
-      "languageName": "F#",
-      "name": "fsharp"
-     },
-     {
-      "aliases": [],
-      "languageName": "HTML",
-      "name": "html"
-     },
-     {
-      "aliases": [
-       "js"
-      ],
-      "languageName": "JavaScript",
-      "name": "javascript"
-     },
-     {
-      "aliases": [],
-      "languageName": "KQL",
-      "name": "kql"
-     },
-     {
-      "aliases": [],
-      "languageName": "Mermaid",
-      "name": "mermaid"
-     },
-     {
-      "aliases": [
-       "powershell"
-      ],
-      "languageName": "PowerShell",
-      "name": "pwsh"
-     },
-     {
-      "aliases": [],
-      "languageName": "SQL",
-      "name": "sql"
-     },
-     {
-      "aliases": [],
-      "name": "value"
-     },
-     {
-      "aliases": [],
-      "name": "webview"
      }
     ]
    }
