--- a/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
+++ b/11. Creating and Using Objects/The Anatomies of Objects and Classes.ipynb
@@ -671,14 +671,15 @@
     "public class Dog\n",
     "{\n",
     "\n",
-    "    // Fields\n",
+    "    // Fields /////////////////////////////////////////////////////////\n",
     "    private string name,\n",
     "                   fur_color,\n",
     "                   breed,\n",
     "                   gender;\n",
+    "    ///////////////////////////////////////////////////////////////////\n",
     "\n",
     "\n",
-    "    // Properties\n",
+    "    // Properties /////////////////////////////////////////////////////\n",
     "    public string Name\n",
     "    {\n",
     "        get\n",
@@ -734,9 +735,10 @@
     "        }\n",
     "\n",
     "    }\n",
+    "    ////////////////////////////////////////////////////////////////////////\n",
     "\n",
     "\n",
-    "    // Constructor\n",
+    "    // Constructor /////////////////////////////////////////////////////////\n",
     "    public Dog( string name, string fur_color, string breed, string gender )\n",
     "    {\n",
     "        this.Name     = name;\n",
@@ -744,9 +746,10 @@
     "        this.Breed    = breed;\n",
     "        this.Gender   = gender;\n",
     "    }\n",
+    "    ////////////////////////////////////////////////////////////////////////\n",
     "\n",
     "\n",
-    "    // Methods\n",
+    "    // Methods /////////////////////////////////////////////////////////////\n",
     "    public void Bark()\n",
     "    {\n",
     "        Console.WriteLine(\"Woof!\");\n",
@@ -766,6 +769,7 @@
     "    {\n",
     "        Console.WriteLine(\"*rolls over*\");\n",
     "    }\n",
+    "    ////////////////////////////////////////////////////////////////////////\n",
     "\n",
     "}"
    ]
@@ -1130,8 +1134,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
