--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -3,7 +3,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 11. Creating and Using Objects"
    ]
@@ -94,13 +101,13 @@
     "\n",
     "\n",
     "    // Constructors ////////////////////////////////////////////////////\n",
-    "    ///////////////////////   Default   //////////////////////////////// \n",
+    "    //                       Default                                  // \n",
     "    public Cat()\n",
     "    {\n",
     "        this.Name     = \"Stray\";\n",
     "        this.FurColor = \"Gray\";\n",
     "    }\n",
-    "    /////////////////////   Parameterized   //////////////////////////// \n",
+    "    //                     Parameterized                               // \n",
     "    public Cat( string name, string fur_color )\n",
     "    {\n",
     "        this.Name     = name;\n",
@@ -298,15 +305,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
      },
      {
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
