--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -212,9 +212,9 @@
     }
    },
    "source": [
-    "The `Cat` `class`  defines the properties `Name` and `FurColor`, which keep their values in the *hidden* (*private*) *fields* *name* and *color*.    \n",
+    "The `Cat` `class`  defines the $Properties$ `Name` and `FurColor`, which keep their values in the *hidden* (*private*) *fields* *name* and *color*.    \n",
     "    \n",
-    "Furthermore, two constructors are defined for creating instances of the `Cat` `class` , respectively *with* and *without* parameters, and a method to `Meow()`."
+    "Furthermore, two $Constructors$ are defined for creating instances of the `Cat` `class` , respectively *with* and *without* parameters, and a $Method$ to `Meow()`."
    ]
   },
   {
