modified:   11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb

--- a/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
+++ b/11. Creating and Using Objects/Creation, Access, and Release of Objects.ipynb
@@ -212,7 +212,7 @@
     }
    },
    "source": [
-    "The `Cat` `class`  defines the $Properties$ `Name` and `FurColor`, which keep their values in the *hidden* (*private*) *fields* *name* and *color*.    \n",
+    "The `Cat` `class`  defines the $Properties$ `Name` and `FurColor`, which keep their values in the *hidden* (*private*) $Fields$ *name* and *color*.    \n",
     "    \n",
     "Furthermore, two $Constructors$ are defined for creating instances of the `Cat` `class` , respectively *with* and *without* parameters, and a $Method$ to `Meow()`."
    ]
